<!--
  ~ Last modified: 09.09.18 18:56
  ~ Copyright (c) OpenDrone, 2018.  All rights reserved.
  ~ The entire project (including this file) is licensed under the GNU GPL v3.0
  -->

<resources>
    <string name="app_name">OpenDrone</string>

    <!--MainActivity-->
    <string name="demo_btn_txt">OpenDrone is awesome!</string>

    <!--Drawer-->
    <string name="opd_nav_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtView_Calibration">Calibration</string>
    <string name="txtView_PinConfiguration">Pin-Configuration</string>
    <string name="btn_TestMotors">Test Motors</string>
    <string name="txt_DroneName">Drone Name</string>
    <string name="txtView_DroneTyp">Drone Typ</string>
    <string name="navItem_FlightPlanner">Flight Planner</string>
    <string name="navItem_Drones">Drones</string>
    <string name="navItem_Fly">Fly</string>
    <string name="navItem_Home">Home</string>
    <string name="navItem_Settings">Settings</string>
    <string name="navItem_Libs">Used Libraries</string>
    <string name="navItem_PID">Adjust PID</string>
    <string name="txt_Drone_description">Drone Description</string>
    <string name="btn_saveChanges">Save</string>
    <string name="btn_goBack">Back</string>
    <string name="txt_calibration">Place the Drone on a flat surface</string>
    <string name="btn_calibration">Start Calibration</string>
    <string name="txt_calibration_inprogress">Calibration in Progress, do not move the Drone</string>
    <string name="txt_calibration_end">Calibration Successful</string>
    <string name="btn_Fly">Fly</string>
    <string name="btn_TestConn">Test Connection</string>
    <string name="btn_Land">Land</string>
    <string name="btn_GoHome">Go Home</string>
    <string name="btn_Control">Control</string>
    <string name="txtView_FlightMode">Flight Mode</string>
    <string name="txtView_Mission">Flight Mode</string>
    <string name="imgView_Logo_Description">Our Product Logo</string>
    <string name="imageView_DronePicture_Description">The Picture of the saved Drone. If non is set, the App Logo is picked</string>
    <string name="btn_Settings">Settings</string>
    <string name="editTxt_DroneName_Error">This field is required</string>
    <string name="toolbar_Calibrate">Calibrate</string>
    <string name="toolbar_PinConfiguration">Pin Configuration</string>
    <string name="alertDialog_Delete">Do you really want to delete the drone?</string>
    <string name="alertDialog_Accept">Hell yeah!</string>
    <string name="alertDialog_Deny">Chill Bro!</string>
    <string name="alertDialog_Picture_Title">New or Existing Picture?</string>
    <string name="alertDialog_Picture_Message">So, we heard you want to add a picture. Do you prefer to take a new one or choose an existing one from your gallery?</string>
    <string name="alertDialog_Picture_Positive">Camera</string>
    <string name="alertDialog_Picture_Negative">Gallery</string>
    <string name="exception_sorry">Error</string>
    <string name="exception_no_location">Please enable the location in your phone\'s settings</string>
    <string name="manual_flight_change_speed">Adjust the speed</string>
    <string name="manual_flight_ip_txt">Enter an IP to connect to</string>
    <string name="manual_flight_connection_failed">Ooops, the app could not connect to an OpenDrone :/</string>
    <string name="manual_flight_connection_success">Connected</string>
    <string name="manual_flight_TxtView_Position">Lat: %1$s\nLng: %2$s</string>
    <string name="manual_flight_TxtView_Height">%1$sm</string>
    <string name="manual_flight_TxtView_AirTemp">Air: %1$s°C</string>
    <string name="manual_flight_TxtView_ControllerTemp">Controller: %1$s°C</string>
    <string name="manual_flight_TxtView_Status">Status: %1$s</string>
    <string name="manual_flight_TxtView_Velocity">%1$s km/h</string>
    <string name="stop_rotor_alarm_message">Do you really want to stop all rotors? this will result in an uncontrolled crash!</string>
    <string name="stop_rotor_alarm_pos">Crash it!</string>
    <string name="stop_rotor_alarm_neg">No</string>
    <string name="go_home_alarm_message">Do you rly want go home fam?</string>
    <string name="go_home_alarm_pos">Hell yeah</string>
    <string name="go_home_alarm_neg">What am i doing here?!</string>
    <string name="flight_plan_save_add_coord">Add Coordinate</string>
    <string name="flight_plan_save_invalid_coord">"Please enter a correct format in the fields!"</string>
    <string name="flight_plan_save_add_coord_pos">Save</string>
    <string name="flight_plan_save_add_coord_neg">Cancel</string>
    <string name="flight_plan_save_error_read_fp">Could not read flightplans</string>
    <string name="flight_plan_save_error_name_empty">This field is required</string>
    <string name="flight_plan_start_txt">S</string>
    <string name="flight_plan_end_txt">E</string>
    <string name="flight_plan_could_not_load">Could not load flightplan</string>
    <string name="error_txt">Fatal Error!\n%1$s</string>
    <string name="navItem_Github">on Github</string>
    <string name="settings_header">Settings</string>
    <string name="max_height">Maximum height: </string>
    <string name="min_height">Minimum height: </string>
    <string name="max_angle">Maximum angle: </string>
    <string name="height_metric">m</string>
    <string name="degrees_metric">°</string>
    <string name="language_text">Language: </string>
    <string name="flightplan_coord_list_element">%1$f/\n%2$f</string>
    <string name="manualflight_no_open_drawer">stay here!</string>
    <string name="adjust_pid_p">P: %1$s</string>
    <string name="adjust_pid_i">I: %1$s</string>
    <string name="adjust_pid_d">D: %1$s</string>
    <string name="adjust_pid_connected">State: %1$s</string>
    <string name="adjust_pid_connect">Connect</string>
    <string name="adjust_pid_disconnect">Disconnect</string>
    <string name="adjust_pid_state_connected">Connected</string>
    <string name="adjust_pid_state_not_connected">Not Connected</string>
    <string name="adjust_pid_reset_values">Reset Values</string>
    <string name="manualflight_move_stick_down">Move the left stick all the way down to fly</string>
    <string name="flightplan_rfab_search">Search</string>
    <string name="flightplan_rfab_add">Add</string>
    <string name="flightplan_rfab_ok">OK</string>
    <string name="fligthplan_point_edit_height">height</string>
    <string name="fligthplan_point_edit_end">end</string>
    <string name="point_label">Point %1$s</string>
    <string name="home_greeting">Hi!</string>
    <string name="home_like">Like OpenDrone?</string>
    <string name="home_follow">Follow us on</string>
    <string name="home_visit">or meet us at</string>
    <string name="home_date_day">04\-05</string>
    <string name="home_date_month">MAY</string>
    <string name="event_nr_1_name">Maker Faire Vienna</string>
    <string name="event_nr_1_location">Vienna</string>
    <string name="settings_pro_mode">I am a pro </string>
    <string name="settings_start_tutorial">Start Tutorial</string>
    <string name="txt_test_motor_instructions">Press a number. The right motor on the drone should begin to spin.</string>
    <string name="fly_forward">Flying forward in</string>
    <string name="flightmode_race">Race</string>
    <string name="flightmode_ah">Altitude Hold</string>
    <string name="flightmode_gps">GPS</string>
    <string name="flightmode_heading">Flight Mode</string>
    <string name="dialog_close">close</string>
</resources>
