<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <at.opendrone.opendrone.utils.CustomFontTextView
        android:id="@+id/raceModeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Flight Mode"
        app:customFont="Roboto-Bold.ttf"
        android:textColor="@color/primaryTextColor" />

    <RadioGroup
        android:id="@+id/flightmodeRadioGroup"
        android:layout_below="@id/raceModeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/flightmode_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flightmode_race" />

        <RadioButton
            android:id="@+id/flightmode_ah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flightmode_ah" />

        <RadioButton
            android:id="@+id/flightmode_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flightmode_gps" />
    </RadioGroup>

</RelativeLayout>