<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txtSettingsTitle"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_header"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchProfiMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Profi-mode "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSettingsTitle" />

    <TextView
        android:id="@+id/txtMaxHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/max_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchProfiMode" />

    <EditText
        android:id="@+id/valMaxHeight"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/txtMaxHeight"
        app:layout_constraintTop_toBottomOf="@+id/txtSettingsTitle" />

    <TextView
        android:id="@+id/txtMeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/height_metric"
        app:layout_constraintStart_toEndOf="@+id/valMaxHeight"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>