<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Last modified: 06.09.18 16:46
  ~ Copyright (c) OpenDrone, 2018.  All rights reserved.
  ~ The entire project (including this file) is licensed under the GNU GPL v3.0
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <at.opendrone.opendrone.utils.CustomFontTextView
            android:id="@+id/greetingTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/home_greeting"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="40sp"
            app:customFont="Roboto-Bold.ttf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <at.opendrone.opendrone.utils.CustomFontTextView
            android:id="@+id/likeOpenDroneTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_like"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            app:customFont="Roboto-Bold.ttf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetingTxtView" />

        <at.opendrone.opendrone.utils.CustomFontTextView
            android:id="@+id/followUsOnTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_follow"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            app:customFont="Roboto-Bold.ttf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/likeOpenDroneTxtView" />

        <RelativeLayout
            android:id="@+id/socialMediaLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/followUsOnTxtView">

            <ImageView
                android:id="@+id/instagramImgView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_instagram"
                android:layout_centerVertical="true" />
            <!-- has to be blue because twitter does not allow their icons to be displayed in any other color than blue or white. see https://about.twitter.com/en_us/company/brand-resources.html-->
            <ImageView
                android:id="@+id/twitterImgView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_twitter"
                android:layout_toEndOf="@id/instagramImgView" />

            <ImageView
                android:id="@+id/githubImgView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_github_logo"
                android:layout_toEndOf="@id/twitterImgView"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/upcomingEventsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/socialMediaLayout">

            <at.opendrone.opendrone.utils.CustomFontTextView
                android:id="@+id/visitUsTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/home_visit"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                app:customFont="Roboto-Bold.ttf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/EventContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@+id/visitUsTxtView">

                <at.opendrone.opendrone.utils.CustomFontTextView
                    android:id="@+id/dateTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_date_day"
                    android:textAlignment="center"
                    android:textColor="@color/primaryColor"
                    app:customFont="Roboto-Bold.ttf"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <at.opendrone.opendrone.utils.CustomFontTextView
                    android:id="@+id/monthTxtView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateTxtView"
                    android:text="@string/home_date_month"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/primaryTextColor"
                    app:customFont="Roboto-Bold.ttf"
                    app:layout_constraintEnd_toEndOf="@+id/dateTxtView"
                    app:layout_constraintStart_toStartOf="@+id/dateTxtView"
                    app:layout_constraintTop_toBottomOf="@+id/dateTxtView" />

                <at.opendrone.opendrone.utils.CustomFontTextView
                    android:id="@+id/eventTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/event_nr_1_name"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    app:customFont="Roboto-Regular.ttf"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dateTxtView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/locationImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_location_city"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/eventLocationTxtView"
                    app:layout_constraintTop_toTopOf="parent" />

                <at.opendrone.opendrone.utils.CustomFontTextView
                    android:id="@+id/eventLocationTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/event_nr_1_location"
                    android:textColor="@color/primaryTextColor"
                    app:customFont="Roboto-Regular.ttf"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/startTutorialImgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_tutorial_start"
            android:tint="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcomingEventsLayout"
            android:visibility="invisible" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>